--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-
+lib_deps = 
+    PubSubClient
+    ArduinoJson
+    LiquidCrystal_I2C
